ERSKY9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 25-APR-2011
description here
====================================================================================

******************************************
CHANGELOG: 29-Jan-2013  MPB
Improve RPM calculation
Move telemetry procedures to frsky.cpp
Move display procedures to lcd.cpp
Add copy and swap models in EEPROM
Make model copy and move work in modelselect menu
Add new file pulses.cpp

******************************************
CHANGELOG: 16-Jan-2013  MPB
Fix model move in modelselect menu, X9D add PXX

******************************************
CHANGELOG: 19-Jan-2013  MPB
Fix voice temps in degF, X9D voice, X9D lcd speedup

******************************************
CHANGELOG: 17-Jan-2013  MPB
X9d volume, add i2c files, changes to X9D/sound.cpp for voice

******************************************
CHANGELOG: 14-Jan-2013  MPB
Cosmetic changes to mixer menu, X9D sound

******************************************
CHANGELOG: 13-Jan-2013  MPB
Fix Pilot name editing bug, slow and delay 25 secs in steps of 0.1 sec

******************************************
CHANGELOG: 10-Jan-2013  MPB
r143 FIx trainer bug, more X9D additions

******************************************
CHANGELOG: 05-Jan-2013  MPB
r132 Add X9D.cpp test program

******************************************
CHANGELOG: 05-Jan-2013  MPB
r131 RPM blade count now 1 to 50
Internal file changes to allow X9D testing

******************************************
CHANGELOG: 02-Dec-2012  MPB
r130 New mixer menu and popup
Fix encoder editing problem
Change modelname editing, allows encoder

******************************************
CHANGELOG: 02-Dec-2012  MPB
r129 Fix voice output for low ratio settings

******************************************
CHANGELOG: 24-Nov-2012  MPB