@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "29.01.2013"
-#define TIME_STR "23:16:52"
-#define SUB_VERS 1589-Mike
-#define SVN_VERS "ersky9x-r150"
+#define DATE_STR "30.01.2013"
+#define TIME_STR "15:09:18"
+#define SUB_VERS 1595-Mike
+#define SVN_VERS "ersky9x-r152"
 #define MOD_VERS "REVB"
